--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=memo_personal_task
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/memo_personal_task
+spring.datasource.username=root
+spring.datasource.password={tada1004}
+spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
