fix: application-example.properties 인코등 utf-8로 변경

--- a/src/main/resources/application-example.properties
+++ b/src/main/resources/application-example.properties
@@ -1,9 +1,9 @@
 # application-example.properties
 
-# Spring Boot ?????? ??
+# Spring Boot 애플리케이션 이름
 spring.application.name=memo_personal_task
 
-# ?????? ?? ?? (?? ??? ?? ??)
+# 데이터베이스 접속 정보 (각자 환경에 맞게 수정)
 spring.datasource.url=jdbc:mysql://localhost:3306/memo
 spring.datasource.username=your_username
 spring.datasource.password=your_password
